--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ crash.*.log
 *.tfvars.json
 !chapter2/**
 
+**/.terraform**
+
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
 override.tf
