--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ crash.*.log
 !chapter2/**
 
 **/.terraform**
+test/**
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
