--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,14 +1,14 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
-- repo: local
-  hooks:
-  - id: tf-formatting
-    name: tf-formatting
-    entry: ./tf-formatting.sh
-    language: script
-    types: [file]
-    pass_filenames: false
+# - repo: local
+#   hooks:
+#   - id: tf-formatting
+#     name: tf-formatting
+#     entry: ./tf-formatting.sh
+#     language: script
+#     types: [file]
+#     pass_filenames: false
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v3.2.0
   hooks:
