--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ crash.*.log
 
 **/.terraform**
 test/**
+**/_backup/**
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
